--- a/TODO
+++ b/TODO
@@ -6,5 +6,5 @@ Affichage prix lors de saisie de recharge
 identification
 personnaliser message erreur (nb de copies manquantes pour faire la commande)
 bouton sauvegarder les modifications lors de la création...
-
+verifier limite affichage commande/reloads utilisateur
 
