fixing plugins login/progress

--- a/TODO
+++ b/TODO
@@ -1,3 +1,6 @@
 Voir nombre de copies pour chaques type de copie dans création commande
 Ajout commande/recharge dans show user
 List form DESC
+
+dsacatvié director index hataccess (options - indexes)
+configurer vhost par ovh pour pointer sur www/public
