Adding password encoder for user and admin

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 Voir nombre de copies pour chaques type de copie dans création commande
 Ajout commande/recharge dans show user
 List form DESC
+INTEGRER FONT CSS
+encoder password user/admin depuis back
 
 dsacatvié director index hataccess (options - indexes)
